// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > ./fixtures/basic.vue 1`] = `
"<script lang="ts">
const styles = _stylex_create({ redBold: { color: 'red', fontWeight: 'bold' } })
</script>
<script setup lang="ts">
import { create as _stylex_create, attrs as _stylex_attrs } from '@stylexjs/stylex'

</script>

<template>
  <p><span v-bind="_stylex_attrs(styles.redBold)">Red</span> Text</p>
</template>
"
`;

exports[`fixtures > ./fixtures/multiple-rules.vue 1`] = `
"<script lang="ts">
const styles = _stylex_create({
  red: { color: 'red' },
  bold: { fontWeight: 'bold' },
})
</script>
<script setup lang="ts">
import { create as _stylex_create, attrs as _stylex_attrs } from '@stylexjs/stylex'

</script>

<template>
  <p><span v-bind="_stylex_attrs(styles.red, styles.bold)">Red</span> Text</p>
</template>
"
`;

exports[`fixtures > ./fixtures/optional-rules.vue 1`] = `
"<script lang="ts">
const styles = _stylex_create({
  red: { color: 'red' },
  bold: { fontWeight: 'bold' },
})
</script>
<script setup lang="ts">
import { create as _stylex_create, attrs as _stylex_attrs } from '@stylexjs/stylex'
defineProps<{ bold?: boolean }>()

</script>

<template>
  <p><span v-bind="_stylex_attrs(styles.red, bold && styles.bold)">Red</span> Text</p>
</template>
"
`;
